--- a/vishalUtech/templates/partials/tertiary_side_bar.html
+++ b/vishalUtech/templates/partials/tertiary_side_bar.html
@@ -13,25 +13,9 @@
         </div>
 
         <div class="widget-area">
-            <aside id="text-3" class="widget widget_text">
-                <div class="textwidget">
-                    <iframe src="http://www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fthemingstrap%2F&amp;width&amp;height=290&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=false&amp;show_border=true"
-                            scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:290px;"
-                            allowTransparency="true"></iframe>
-                </div>
-            </aside>
-            <aside id="recent-posts-2" class="widget widget_recent_entries"><h3 class="widget-title">Recent Posts</h3>
-{#                TODO  RECENTPOSTS#}
-                <ul>
-                    <li>
-                        <a href="2013/08/16/how-to-market-your-video-on-youtube-easily-2/index.html">How to Market Your
-                            Video on YouTube Easily</a>
-                    </li>
-
-                </ul>
-            </aside>
-            <aside id="my_popula_posts-2" class="widget widget_my_popula_posts"><h3 class="widget-title">Popular
-                Posts</h3>
+            <aside id="my_popula_posts-2" class="widget widget_my_popula_posts">
+                <h3 class="widget-title">Popular this week
+                </h3>
 {#                TODO POPULAR POSTS#}
                 <ul>
                     <li>
@@ -46,93 +30,6 @@
                         <span>06 Aug , 2013</span>
                     </li>
                 </ul>
-            </aside>
-{#          TODO FIX CALENDAR#}
-            <aside id="calendar-2" class="widget widget_calendar">
-                <div id="calendar_wrap">
-                    <table id="wp-calendar">
-                        <caption>December 2014</caption>
-                        <thead>
-                        <tr>
-                            <th scope="col" title="Monday">M</th>
-                            <th scope="col" title="Tuesday">T</th>
-                            <th scope="col" title="Wednesday">W</th>
-                            <th scope="col" title="Thursday">T</th>
-                            <th scope="col" title="Friday">F</th>
-                            <th scope="col" title="Saturday">S</th>
-                            <th scope="col" title="Sunday">S</th>
-                        </tr>
-                        </thead>
-
-                        <tfoot>
-                        <tr>
-                            <td colspan="3" id="prev"><a href="2013/08/index.html"
-                                                         title="View posts for August 2013">&laquo; Aug</a></td>
-                            <td class="pad">&nbsp;</td>
-                            <td colspan="3" id="next" class="pad">&nbsp;</td>
-                        </tr>
-                        </tfoot>
-
-                        <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>2</td>
-                            <td>3</td>
-                            <td>4</td>
-                            <td>5</td>
-                            <td>6</td>
-                            <td>7</td>
-                        </tr>
-                        <tr>
-                            <td>8</td>
-                            <td>9</td>
-                            <td>10</td>
-                            <td>11</td>
-                            <td id="today">12</td>
-                            <td>13</td>
-                            <td>14</td>
-                        </tr>
-                        <tr>
-                            <td>15</td>
-                            <td>16</td>
-                            <td>17</td>
-                            <td>18</td>
-                            <td>19</td>
-                            <td>20</td>
-                            <td>21</td>
-                        </tr>
-                        <tr>
-                            <td>22</td>
-                            <td>23</td>
-                            <td>24</td>
-                            <td>25</td>
-                            <td>26</td>
-                            <td>27</td>
-                            <td>28</td>
-                        </tr>
-                        <tr>
-                            <td>29</td>
-                            <td>30</td>
-                            <td>31</td>
-                            <td class="pad" colspan="4">&nbsp;</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </aside>
-{#            AD #}
-            <aside id="text-2" class="widget widget_text">
-                <div class="textwidget">
-                    <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <!-- onlarge -->
-                    <ins class="adsbygoogle"
-                         style="display:inline-block;width:300px;height:600px"
-                         data-ad-client="ca-pub-4269944909786602"
-                         data-ad-slot="5671600261"></ins>
-                    <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-                </div>
             </aside>
         </div>
         <!-- .widget-area -->
