--- a/vishalUtech/templates/partials/nav_bar.html
+++ b/vishalUtech/templates/partials/nav_bar.html
@@ -1,7 +1,14 @@
+{% load pages_tags %}
+<h1>{% with get_categories  as categories %}
+{% for category in categories %}
+<h2>{{ category.title }}!</h2>
+{% endfor %}
+
+{% endwith %}</h1>
 <div id="navbar" class="navbar navbar-fixed-top">
         <div class="nav-middle">
              <div class="navbar-header">
-                <a class="navbar-brand" href="index.html" title="Mashthirteen Pro" rel="home">
+                <a class="navbar-brand" href="/" title="Mashthirteen Pro" rel="home">
                     {{ settings.SITE_TITLE }}</a>
             </div>
             <div class="dropdown searchtoggel">
@@ -34,66 +41,44 @@
 
                 <div class="menu-mainmenu-container">
                     <ul id="menu-mainmenu" class="nav-menu">
-                        <li id="menu-item-214"
-                            class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-214"><a
-                                href="category/business/index.html">Business</a></li>
-                        <li id="menu-item-219"
-                            class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-219">
-                            <a href="category/lifestyle/index.html">Lifestyle</a>
-                            <ul class="sub-menu">
-                                <li id="menu-item-225"
-                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-225"><a
-                                        href="category/arts-entertainment/index.html">Arts &#038; Entertainment</a></li>
-                                <li id="menu-item-224"
-                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-224"><a
-                                        href="category/foods-cuisine/index.html">Foods &#038; Cuisine</a></li>
-                                <li id="menu-item-230"
-                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-230"><a
-                                        href="category/health-tips-2/index.html">Health Tips</a></li>
-                                <li id="menu-item-218"
-                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-218"><a
-                                        href="category/yoga-fitness/index.html">Yoga &#038; Fitness</a></li>
-                                <li id="menu-item-217"
-                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-217"><a
-                                        href="category/relationships-family/index.html">Relationships &#038; Family</a>
-                                </li>
-                                <li id="menu-item-223"
-                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-223"><a
-                                        href="category/career/index.html">Career</a></li>
-                                <li id="menu-item-215"
-                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-215"><a
-                                        href="category/holidays-celebrations/index.html">Holidays &#038;
-                                    Celebrations</a></li>
-                            </ul>
-                        </li>
+                        {% include 'pages/menus/category_submenu.html' %}
 
-                        <li id="menu-item-227"
-                            class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-227">
-                            <a href="category/internet-technology/index.html">Internet &#038; Technology</a>
-                            <ul class="sub-menu">
-                                <li id="menu-item-216"
-                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-216"><a
-                                        href="category/mobile/index.html">Mobile</a></li>
-                                <li id="menu-item-226"
-                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-226"><a
-                                        href="category/gadgets-and-electronics/index.html">Gadgets and electronics</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li id="menu-item-228"
-                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-228"><a
-                                href="disclaimer/index.html">Disclaimer</a></li>
-                        <li id="menu-item-229"
-                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-229"><a
-                                href="privacy-policy/index.html">Privacy Policy</a></li>
+{#                        <li id="menu-item-219"#}
+{#                            class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-219">#}
+{#                            <a href="category/lifestyle/index.html">Lifestyle</a>#}
+{#                            <ul class="sub-menu">#}
+{#                                <li id="menu-item-225"#}
+{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-225"><a#}
+{#                                        href="category/arts-entertainment/index.html">Arts &#038; Entertainment</a></li>#}
+{#                                <li id="menu-item-224"#}
+{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-224"><a#}
+{#                                        href="category/foods-cuisine/index.html">Foods &#038; Cuisine</a></li>#}
+{#                                <li id="menu-item-230"#}
+{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-230"><a#}
+{#                                        href="category/health-tips-2/index.html">Health Tips</a></li>#}
+{#                                <li id="menu-item-218"#}
+{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-218"><a#}
+{#                                        href="category/yoga-fitness/index.html">Yoga &#038; Fitness</a></li>#}
+{#                                <li id="menu-item-217"#}
+{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-217"><a#}
+{#                                        href="category/relationships-family/index.html">Relationships &#038; Family</a>#}
+{#                                </li>#}
+{#                                <li id="menu-item-223"#}
+{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-223"><a#}
+{#                                        href="category/career/index.html">Career</a></li>#}
+{#                                <li id="menu-item-215"#}
+{#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-215"><a#}
+{#                                        href="category/holidays-celebrations/index.html">Holidays &#038;#}
+{#                                    Celebrations</a></li>#}
+{#                            </ul>#}
+{#                        </li>#}
+                        {#            Include pages menu            #}
+                        {% page_menu "pages/menus/pages_as_submenu.html" %}
+                        {#            END Include                     #}
                     </ul>
                 </div>
 
 
             </nav>
-{#            <div class="navbar-collapse collapse">#}
-{#                {% search_form "all" %}#}
-{#                {% page_menu "pages/menus/dropdown.html" %}#}
-{#            </div>#}
         </div>
     </div>
