--- a/vishalUtech/templates/pages/menus/footer_archives.html
+++ b/vishalUtech/templates/pages/menus/footer_archives.html
@@ -2,10 +2,10 @@
 {% load blog_tags %}
 {% load mezzanine_tags %}
 {% block blog_months %}
-    <h1>!!!</h1>
     {% blog_months as months %}
     {% if months %}
-        <h3>{% trans "Archive" %}</h3>
+        <h3 class="widget-title">{% trans "Archive" %}</h3>
+        <ul>
         {% for month in months %}
             <li>
                 <a href="{% url "blog_post_list_month" year=month.date.year month=month.date.month %}">
@@ -13,5 +13,6 @@
                 </a>
             </li>
         {% endfor %}
+        </ul>
     {% endif %}
 {% endblock %}
