--- a/vishalUtech/templates/blog/blog_post_detail.html
+++ b/vishalUtech/templates/blog/blog_post_detail.html
@@ -1,5 +1,5 @@
 {% extends "blog/blog_post_list.html" %}
-{% load mezzanine_tags comment_tags keyword_tags rating_tags i18n future disqus_tags %}
+{% load mezzanine_tags comment_tags keyword_tags rating_tags i18n future disqus_tags custom_comment_tags %}
 
 {% block meta_title %}{{ blog_post.meta_title }}{% endblock %}
 {% block meta_keywords %}{% metablock %}
@@ -133,7 +133,7 @@
                     {% endblock %}
                 </div>
                 {% block blog_post_detail_comments %}
-                    {% if blog_post.allow_comments %}{% comments_for blog_post %}{% endif %}
+                    {% if blog_post.allow_comments %}{% custom_comments_for blog_post %}{% endif %}
                 {% endblock %}
             </div>
         </div>
